Risolti molteplici warnings, alcuni ancora da risolvere